# NUCLEO144_Rust_UART

./: .gitconfig.swn  .gitconfig.swo  .gitconfig.swp  Cargo.toml  README.md  memory.x
src/: main.rs
